[package]
name = "burp"
version = "0.1.0"
edition = "2024"

# Adding http v0.2.12 (available: v1.3.1)
# Adding hyper v0.14.32 (available: v1.6.0)

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
